document type ok
