# storage/api-docs/api-docs.json
@@ -304,7 +304,12 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
             }
         },
         "/customer/showbycommerce": {
@@ -333,8 +338,38 @@
                         "schema": {
                             "type": "integer"
                         }
+                    },
+                    {
+                        "name": "invoices_status_id",
+                        "in": "query",
+                        "description": "Commerce Id",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/customer/documenttypes": {
+            "get": {
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get Document Types",
+                "description": "Return Document Types",
+                "operationId": "getDocumentTypes",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
